@startuml

title Login Flow

[*] --> Prompt: String

Prompt --> Authenticate
Prompt --> ForgotPass
Prompt -> EnterAccountInfo

Authenticate: Credentials

ForgotPass --> Prompt

ForgotPass: String

'state EnterAccountInfo {
'    [*] --> EnterEmail
'    EnterEmail --> EnterPassword
'    EnterPassword --> [*]
'}

EnterAccountInfo --> CreateAccount
CreateAccount: User
CreateAccount --> Authenticate

note "This is a note about login" as N1
note left of Prompt
    This is where the
    login screen goes
end note

Authenticate -> [*]: OAuthToken
@enduml
